# Nuitka-Stubgen

./: .gitignore  pyproject.toml
.github/workflows/: tests.yml
helper/: nuitka_helper.py
src/Ast_Stubgen/: __init__.py  main.py  stubgen.py
tests/: test_generate_text_stub.py
tests/helper_files/: backup_full_code.py  bubble_sort.py  code.py
